--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -3,7 +3,7 @@ on:
   push:
 env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+  DOCKERHUB_ACCESS_TOKEN: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,14 +16,14 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./
           push: true
           #dockerfile: ./Dockerfile   # Specify the path to your Dockerfile
-          tags: moisesgc/webacademy:latest
+          tags: ecthondocker/webacademy:latest
   deploy:
     runs-on: ubuntu-latest
     steps:
