--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -29,4 +29,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Fazendo deploy
-        run: echo "Deploy com sucesso!"
+        run: echo "Deploy com sucesso!!"
