--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -1,32 +1,40 @@
 name: Build on DockerHub
+
 on:
   push:
+    branches:
+      - main
+
 env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKERHUB_ACCESS_TOKEN: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
-  DOCKER_CLI_EXPERIMENTAL: enabled
+  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./
           push: true
-          #dockerfile: ./Dockerfile   # Specify the path to your Dockerfile
           tags: ecthondocker/webacademy:latest
+
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Fazendo deploy
-        run: echo "Deploy com sucesso!!"
+        run: echo "Deploy com sucesso!"
